Added udp client server

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.main.web-application-type=NONE
+
+#app.executable.path=/Users/paulofernandes/Documents/dev/pfernand/anti-cheat/target/classes/VLC.app
+app.executable.path=MOHAA.exe
+server.ip=96.10.41.134
+server.port=12243
