--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.pfernand</groupId>
 	<artifactId>anti-cheat</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.1</version>
 	<name>anti-cheat</name>
 	<description>Demo project for Spring Boot</description>
 
