--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.pfernand</groupId>
-	<artifactId>anti-cheat</artifactId>
-	<version>1.0.1</version>
-	<name>anti-cheat</name>
+	<artifactId>mohaa-nocheats</artifactId>
+	<version>1.1.0</version>
+	<name>mohaa-nocheats</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
@@ -39,6 +39,22 @@
 			<artifactId>lombok</artifactId>
 			<version>1.18.12</version>
 			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>commons-net</groupId>
+			<artifactId>commons-net</artifactId>
+			<version>3.6</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.7</version>
+		</dependency>
+		<dependency>
+			<groupId>com.github.ulisesbocchio</groupId>
+			<artifactId>jasypt-spring-boot-starter</artifactId>
+			<version>2.0.0</version>
 		</dependency>
 
 		<dependency>
